--- a/entify/templates/entify/base.html
+++ b/entify/templates/entify/base.html
@@ -4,13 +4,49 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Geist:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>Workers panel</title>
-    <style>
-      @view-transition {
-        navigation: auto;
+    <style type="text/tailwindcss">
+      @theme {
+        --color-spacify: rgb(29, 185, 84);
+      }
+      @layer components {
+        .jumbotron .input, .jumbotron .select {
+          border-radius: 0 !important;
+        }
+        .input, .select {
+          border-color: #111;
+        }
+        tr td {
+          color: rgba(0, 0, 0, .6);
+          font-size: 12pt;
+        }
+        tr td button {
+          color: rgba(0, 0, 0, .6);
+
+        }
+        .btn-primary {
+          background: var(--color-spacify);
+          color: black !important;
+          border: 1pt solid var(--color-spacify);
+        }
+        .btn {
+          border-radius: calc(infinity * 1px);
+          --btn-shadow: none;
+          @variant hover {
+            transform: scale(1.05) !important;
+          }
+          @variant active {
+            transform: scale(1) !important;
+          }
+        }
       }
     </style>
     <link
@@ -85,6 +121,16 @@
       button:active {
         transform: scale(1) !important;
       }
+      .container {
+        margin-left: 15%;
+        margin-right: 15%;
+      }
+      @media screen and (max-width: 720pt) {
+        .container {
+          margin-left: 0;
+          margin-right: 0;
+        }
+      }
     </style>
     <script>
       function handleSubmit(event) {
@@ -97,7 +143,7 @@
       }
     </script>
   </head>
-  <body class="[--color-primary:black]">
+  <body class="">
     {% block body %}{% endblock %}
     {% block bottom_tab_bar %}{% endblock %}
     </div>
